# BillSplitter

./: LICENSE  README.md  main.py  pyproject.toml  pytest.toml
examples/: group-holiday.py
src/pybillsplitter/util/bills/: bills.py
src/pybillsplitter/util/persons/: persons.py
src/pybillsplitter/util/services/: bill_splitter_service.py
src/pybillsplitter/util/transactions/: transactions.py
src/util/: bills.py  groups.py  people.py
tests/: test_bills.py  test_group_bill_splitting.py
util/groups/: groups.py
