[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pybillsplitter"
version = "0.0.1"
authors = [
  { name="Guy Simmonds" },
]
description = "A simple depency free Python library for calculating how to split bills between a group"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/guyesimmo/BillSplitter"
Issues = "https://github.com/guyesimmo/BillSplitter/issues"