[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
dependencies = []  # Add your runtime deps here

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false  # Use true only if using namespace packages